tests/snapshots/snapshots__ir_enum_and_match.snap
---
source: tests/snapshots.rs
expression: module
---
IrModule {
    structs: [],
    traits: [],
    enums: [
        IrEnum {
            name: "Status",
            visibility: Private,
            variants: [
                IrEnumVariant {
                    name: "active",
                    fields: [],
                    span: IrSpan {
                        span: Span {
                            start: Location {
                                offset: 0,
                                line: 1,
                                column: 1,
                            },
                            end: Location {
                                offset: 0,
                                line: 1,
                                column: 1,
                            },
                        },
                        file: FileId(
                            0,
                        ),
                    },
                },
                IrEnumVariant {
                    name: "inactive",
                    fields: [],
                    span: IrSpan {
                        span: Span {
                            start: Location {
                                offset: 0,
                                line: 1,
                                column: 1,
                            },
                            end: Location {
                                offset: 0,
                                line: 1,
                                column: 1,
                            },
                        },
                        file: FileId(
                            0,
                        ),
                    },
                },
                IrEnumVariant {
                    name: "pending",
                    fields: [
                        IrField {
                            name: "since",
                            ty: Primitive(
                                I32,
                            ),
                            mutable: false,
                            optional: false,
                            default: None,
                            doc: None,
                            convention: Let,
                            span: IrSpan {
                                span: Span {
                                    start: Location {
                                        offset: 0,
                                        line: 1,
                                        column: 1,
                                    },
                                    end: Location {
                                        offset: 0,
                                        line: 1,
                                        column: 1,
                                    },
                                },
                                file: FileId(
                                    0,
                                ),
                            },
                        },
                    ],
                    span: IrSpan {
                        span: Span {
                            start: Location {
                                offset: 0,
                                line: 1,
                                column: 1,
                            },
                            end: Location {
                                offset: 0,
                                line: 1,
                                column: 1,
                            },
                        },
                        file: FileId(
                            0,
                        ),
                    },
                },
            ],
            generic_params: [],
            doc: None,
            span: IrSpan {
                span: Span {
                    start: Location {
                        offset: 0,
                        line: 1,
                        column: 1,
                    },
                    end: Location {
                        offset: 0,
                        line: 1,
                        column: 1,
                    },
                },
                file: FileId(
                    0,
                ),
            },
        },
    ],
    impls: [],
    lets: [],
    functions: [
        IrFunction {
            name: "label",
            generic_params: [],
            params: [
                IrFunctionParam {
                    binding_id: BindingId(
                        0,
                    ),
                    name: "s",
                    external_label: None,
                    ty: Some(
                        Enum(
                            EnumId(
                                0,
                            ),
                        ),
                    ),
                    default: None,
                    convention: Let,
                    span: IrSpan {
                        span: Span {
                            start: Location {
                                offset: 0,
                                line: 1,
                                column: 1,
                            },
                            end: Location {
                                offset: 0,
                                line: 1,
                                column: 1,
                            },
                        },
                        file: FileId(
                            0,
                        ),
                    },
                },
            ],
            return_type: Some(
                Primitive(
                    I32,
                ),
            ),
            body: Some(
                Match {
                    scrutinee: Reference {
                        path: [
                            "s",
                        ],
                        target: Unresolved,
                        ty: Enum(
                            EnumId(
                                0,
                            ),
                        ),
                        span: IrSpan {
                            span: Span {
                                start: Location {
                                    offset: 123,
                                    line: 5,
                                    column: 19,
                                },
                                end: Location {
                                    offset: 124,
                                    line: 5,
                                    column: 20,
                                },
                            },
                            file: FileId(
                                0,
                            ),
                        },
                    },
                    arms: [
                        IrMatchArm {
                            variant: "active",
                            variant_idx: VariantIdx(
                                0,
                            ),
                            is_wildcard: false,
                            bindings: [],
                            body: Literal {
                                value: Number(
                                    NumberLiteral {
                                        value: Integer(
                                            1,
                                        ),
                                        suffix: None,
                                        kind: Integer,
                                    },
                                ),
                                ty: Primitive(
                                    I32,
                                ),
                                span: IrSpan {
                                    span: Span {
                                        start: Location {
                                            offset: 152,
                                            line: 6,
                                            column: 26,
                                        },
                                        end: Location {
                                            offset: 153,
                                            line: 6,
                                            column: 27,
                                        },
                                    },
                                    file: FileId(
                                        0,
                                    ),
                                },
                            },
                        },
                        IrMatchArm {
                            variant: "inactive",
                            variant_idx: VariantIdx(
                                0,
                            ),
                            is_wildcard: false,
                            bindings: [],
                            body: Literal {
                                value: Number(
                                    NumberLiteral {
                                        value: Integer(
                                            0,
                                        ),
                                        suffix: None,
                                        kind: Integer,
                                    },
                                ),
                                ty: Primitive(
                                    I32,
                                ),
                                span: IrSpan {
                                    span: Span {
                                        start: Location {
                                            offset: 182,
                                            line: 7,
                                            column: 28,
                                        },
                                        end: Location {
                                            offset: 183,
                                            line: 7,
                                            column: 29,
                                        },
                                    },
                                    file: FileId(
                                        0,
                                    ),
                                },
                            },
                        },
                        IrMatchArm {
                            variant: "pending",
                            variant_idx: VariantIdx(
                                0,
                            ),
                            is_wildcard: false,
                            bindings: [
                                (
                                    "since",
                                    BindingId(
                                        0,
                                    ),
                                    Primitive(
                                        I32,
                                    ),
                                ),
                            ],
                            body: Reference {
                                path: [
                                    "since",
                                ],
                                target: Unresolved,
                                ty: Primitive(
                                    I32,
                                ),
                                span: IrSpan {
                                    span: Span {
                                        start: Location {
                                            offset: 218,
                                            line: 8,
                                            column: 34,
                                        },
                                        end: Location {
                                            offset: 223,
                                            line: 8,
                                            column: 39,
                                        },
                                    },
                                    file: FileId(
                                        0,
                                    ),
                                },
                            },
                        },
                    ],
                    ty: Primitive(
                        I32,
                    ),
                    span: IrSpan {
                        span: Span {
                            start: Location {
                                offset: 117,
                                line: 5,
                                column: 13,
                            },
                            end: Location {
                                offset: 237,
                                line: 9,
                                column: 14,
                            },
                        },
                        file: FileId(
                            0,
                        ),
                    },
                },
            ),
            extern_abi: None,
            attributes: [],
            doc: None,
            span: IrSpan {
                span: Span {
                    start: Location {
                        offset: 0,
                        line: 1,
                        column: 1,
                    },
                    end: Location {
                        offset: 0,
                        line: 1,
                        column: 1,
                    },
                },
                file: FileId(
                    0,
                ),
            },
        },
    ],
    imports: [],
    modules: [],
    file_table: [],
    struct_names: {},
    trait_names: {},
    enum_names: {
        "Status": EnumId(
            0,
        ),
    },
    function_names: {
        "label": FunctionId(
            0,
        ),
    },
    let_names: {},
}
