tests/snapshots/snapshots__ir_struct_and_impl.snap
---
source: tests/snapshots.rs
expression: module
---
IrModule {
    structs: [
        IrStruct {
            name: "Point",
            visibility: Private,
            traits: [],
            fields: [
                IrField {
                    name: "x",
                    ty: Primitive(
                        I32,
                    ),
                    mutable: false,
                    optional: false,
                    default: None,
                    doc: None,
                    convention: Let,
                    span: IrSpan {
                        span: Span {
                            start: Location {
                                offset: 0,
                                line: 1,
                                column: 1,
                            },
                            end: Location {
                                offset: 0,
                                line: 1,
                                column: 1,
                            },
                        },
                        file: FileId(
                            0,
                        ),
                    },
                },
                IrField {
                    name: "y",
                    ty: Primitive(
                        I32,
                    ),
                    mutable: false,
                    optional: false,
                    default: None,
                    doc: None,
                    convention: Let,
                    span: IrSpan {
                        span: Span {
                            start: Location {
                                offset: 0,
                                line: 1,
                                column: 1,
                            },
                            end: Location {
                                offset: 0,
                                line: 1,
                                column: 1,
                            },
                        },
                        file: FileId(
                            0,
                        ),
                    },
                },
            ],
            generic_params: [],
            doc: None,
            span: IrSpan {
                span: Span {
                    start: Location {
                        offset: 0,
                        line: 1,
                        column: 1,
                    },
                    end: Location {
                        offset: 0,
                        line: 1,
                        column: 1,
                    },
                },
                file: FileId(
                    0,
                ),
            },
        },
    ],
    traits: [],
    enums: [],
    impls: [
        IrImpl {
            target: Struct(
                StructId(
                    0,
                ),
            ),
            trait_ref: None,
            is_extern: false,
            generic_params: [],
            functions: [
                IrFunction {
                    name: "magnitude",
                    generic_params: [],
                    params: [
                        IrFunctionParam {
                            binding_id: BindingId(
                                0,
                            ),
                            name: "self",
                            external_label: None,
                            ty: None,
                            default: None,
                            convention: Let,
                            span: IrSpan {
                                span: Span {
                                    start: Location {
                                        offset: 0,
                                        line: 1,
                                        column: 1,
                                    },
                                    end: Location {
                                        offset: 0,
                                        line: 1,
                                        column: 1,
                                    },
                                },
                                file: FileId(
                                    0,
                                ),
                            },
                        },
                    ],
                    return_type: Some(
                        Primitive(
                            I32,
                        ),
                    ),
                    body: Some(
                        BinaryOp {
                            left: SelfFieldRef {
                                field: "x",
                                field_idx: FieldIdx(
                                    0,
                                ),
                                ty: Primitive(
                                    I32,
                                ),
                                span: IrSpan {
                                    span: Span {
                                        start: Location {
                                            offset: 119,
                                            line: 6,
                                            column: 17,
                                        },
                                        end: Location {
                                            offset: 125,
                                            line: 6,
                                            column: 23,
                                        },
                                    },
                                    file: FileId(
                                        0,
                                    ),
                                },
                            },
                            op: Add,
                            right: SelfFieldRef {
                                field: "y",
                                field_idx: FieldIdx(
                                    0,
                                ),
                                ty: Primitive(
                                    I32,
                                ),
                                span: IrSpan {
                                    span: Span {
                                        start: Location {
                                            offset: 128,
                                            line: 6,
                                            column: 26,
                                        },
                                        end: Location {
                                            offset: 134,
                                            line: 6,
                                            column: 32,
                                        },
                                    },
                                    file: FileId(
                                        0,
                                    ),
                                },
                            },
                            ty: Primitive(
                                I32,
                            ),
                            span: IrSpan {
                                span: Span {
                                    start: Location {
                                        offset: 119,
                                        line: 6,
                                        column: 17,
                                    },
                                    end: Location {
                                        offset: 134,
                                        line: 6,
                                        column: 32,
                                    },
                                },
                                file: FileId(
                                    0,
                                ),
                            },
                        },
                    ),
                    extern_abi: None,
                    attributes: [],
                    doc: None,
                    span: IrSpan {
                        span: Span {
                            start: Location {
                                offset: 0,
                                line: 1,
                                column: 1,
                            },
                            end: Location {
                                offset: 0,
                                line: 1,
                                column: 1,
                            },
                        },
                        file: FileId(
                            0,
                        ),
                    },
                },
            ],
            span: IrSpan {
                span: Span {
                    start: Location {
                        offset: 0,
                        line: 1,
                        column: 1,
                    },
                    end: Location {
                        offset: 0,
                        line: 1,
                        column: 1,
                    },
                },
                file: FileId(
                    0,
                ),
            },
        },
    ],
    lets: [],
    functions: [],
    imports: [],
    modules: [],
    file_table: [],
    struct_names: {
        "Point": StructId(
            0,
        ),
    },
    trait_names: {},
    enum_names: {},
    function_names: {},
    let_names: {},
}
