tests/snapshots/snapshots__ir_trait_and_impl.snap
---
source: tests/snapshots.rs
expression: module
---
IrModule {
    structs: [
        IrStruct {
            name: "Square",
            visibility: Private,
            traits: [
                IrTraitRef {
                    trait_id: TraitId(
                        0,
                    ),
                    args: [],
                },
            ],
            fields: [
                IrField {
                    name: "side",
                    ty: Primitive(
                        I32,
                    ),
                    mutable: false,
                    optional: false,
                    default: None,
                    doc: None,
                    convention: Let,
                    span: IrSpan {
                        span: Span {
                            start: Location {
                                offset: 0,
                                line: 1,
                                column: 1,
                            },
                            end: Location {
                                offset: 0,
                                line: 1,
                                column: 1,
                            },
                        },
                        file: FileId(
                            0,
                        ),
                    },
                },
            ],
            generic_params: [],
            doc: None,
            span: IrSpan {
                span: Span {
                    start: Location {
                        offset: 0,
                        line: 1,
                        column: 1,
                    },
                    end: Location {
                        offset: 0,
                        line: 1,
                        column: 1,
                    },
                },
                file: FileId(
                    0,
                ),
            },
        },
    ],
    traits: [
        IrTrait {
            name: "Area",
            visibility: Private,
            composed_traits: [],
            fields: [],
            methods: [
                IrFunctionSig {
                    name: "area",
                    params: [
                        IrFunctionParam {
                            binding_id: BindingId(
                                0,
                            ),
                            name: "self",
                            external_label: None,
                            ty: None,
                            default: None,
                            convention: Let,
                            span: IrSpan {
                                span: Span {
                                    start: Location {
                                        offset: 0,
                                        line: 1,
                                        column: 1,
                                    },
                                    end: Location {
                                        offset: 0,
                                        line: 1,
                                        column: 1,
                                    },
                                },
                                file: FileId(
                                    0,
                                ),
                            },
                        },
                    ],
                    return_type: Some(
                        Primitive(
                            I32,
                        ),
                    ),
                    attributes: [],
                    span: IrSpan {
                        span: Span {
                            start: Location {
                                offset: 0,
                                line: 1,
                                column: 1,
                            },
                            end: Location {
                                offset: 0,
                                line: 1,
                                column: 1,
                            },
                        },
                        file: FileId(
                            0,
                        ),
                    },
                },
            ],
            generic_params: [],
            doc: None,
            span: IrSpan {
                span: Span {
                    start: Location {
                        offset: 0,
                        line: 1,
                        column: 1,
                    },
                    end: Location {
                        offset: 0,
                        line: 1,
                        column: 1,
                    },
                },
                file: FileId(
                    0,
                ),
            },
        },
    ],
    enums: [],
    impls: [
        IrImpl {
            target: Struct(
                StructId(
                    0,
                ),
            ),
            trait_ref: Some(
                IrTraitRef {
                    trait_id: TraitId(
                        0,
                    ),
                    args: [],
                },
            ),
            is_extern: false,
            generic_params: [],
            functions: [
                IrFunction {
                    name: "area",
                    generic_params: [],
                    params: [
                        IrFunctionParam {
                            binding_id: BindingId(
                                0,
                            ),
                            name: "self",
                            external_label: None,
                            ty: None,
                            default: None,
                            convention: Let,
                            span: IrSpan {
                                span: Span {
                                    start: Location {
                                        offset: 0,
                                        line: 1,
                                        column: 1,
                                    },
                                    end: Location {
                                        offset: 0,
                                        line: 1,
                                        column: 1,
                                    },
                                },
                                file: FileId(
                                    0,
                                ),
                            },
                        },
                    ],
                    return_type: Some(
                        Primitive(
                            I32,
                        ),
                    ),
                    body: Some(
                        BinaryOp {
                            left: SelfFieldRef {
                                field: "side",
                                field_idx: FieldIdx(
                                    0,
                                ),
                                ty: Primitive(
                                    I32,
                                ),
                                span: IrSpan {
                                    span: Span {
                                        start: Location {
                                            offset: 185,
                                            line: 10,
                                            column: 17,
                                        },
                                        end: Location {
                                            offset: 194,
                                            line: 10,
                                            column: 26,
                                        },
                                    },
                                    file: FileId(
                                        0,
                                    ),
                                },
                            },
                            op: Mul,
                            right: SelfFieldRef {
                                field: "side",
                                field_idx: FieldIdx(
                                    0,
                                ),
                                ty: Primitive(
                                    I32,
                                ),
                                span: IrSpan {
                                    span: Span {
                                        start: Location {
                                            offset: 197,
                                            line: 10,
                                            column: 29,
                                        },
                                        end: Location {
                                            offset: 206,
                                            line: 10,
                                            column: 38,
                                        },
                                    },
                                    file: FileId(
                                        0,
                                    ),
                                },
                            },
                            ty: Primitive(
                                I32,
                            ),
                            span: IrSpan {
                                span: Span {
                                    start: Location {
                                        offset: 185,
                                        line: 10,
                                        column: 17,
                                    },
                                    end: Location {
                                        offset: 206,
                                        line: 10,
                                        column: 38,
                                    },
                                },
                                file: FileId(
                                    0,
                                ),
                            },
                        },
                    ),
                    extern_abi: None,
                    attributes: [],
                    doc: None,
                    span: IrSpan {
                        span: Span {
                            start: Location {
                                offset: 0,
                                line: 1,
                                column: 1,
                            },
                            end: Location {
                                offset: 0,
                                line: 1,
                                column: 1,
                            },
                        },
                        file: FileId(
                            0,
                        ),
                    },
                },
            ],
            span: IrSpan {
                span: Span {
                    start: Location {
                        offset: 0,
                        line: 1,
                        column: 1,
                    },
                    end: Location {
                        offset: 0,
                        line: 1,
                        column: 1,
                    },
                },
                file: FileId(
                    0,
                ),
            },
        },
    ],
    lets: [],
    functions: [],
    imports: [],
    modules: [],
    file_table: [],
    struct_names: {
        "Square": StructId(
            0,
        ),
    },
    trait_names: {
        "Area": TraitId(
            0,
        ),
    },
    enum_names: {},
    function_names: {},
    let_names: {},
}
